--- a/package.json
+++ b/package.json
@@ -5,9 +5,21 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "cypress:open": "start-server-and-test start 4200 \"cypress open\"",
+    "cypress:verify": "cypress verify",
+    "cypress:run": "start-server-and-test start 4200 \"cypress run\"",
+    "lint": "ng lint"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupJest.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/src/test.ts"
+    ]
   },
   "private": true,
   "dependencies": {
@@ -27,18 +39,16 @@
     "@angular-devkit/build-angular": "~0.1000.0",
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
+    "@cypress/webpack-preprocessor": "^5.4.1",
+    "@types/cypress": "^1.1.3",
+    "@types/jest": "^26.0.3",
     "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^6.0.0-next.1",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
+    "cypress": "^4.9.0",
+    "jest": "^26.1.0",
+    "jest-preset-angular": "^8.2.1",
+    "start-server-and-test": "^1.11.0",
+    "ts-loader": "^7.0.5",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
