--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
               "src/mockServiceWorker.js"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
             "scripts": []
