--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "jest --testPathPattern=src/app",
     "server:test": "start-server-and-test start 4200 cypress:open",
     "server:test:run": "start-server-and-test start 4200 cypress:run",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "lint": "ng lint"
   },
   "jest": {
@@ -41,6 +43,7 @@
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@cypress/webpack-preprocessor": "^5.4.1",
+    "@testing-library/cypress": "^7.0.1",
     "@types/cypress": "^1.1.3",
     "@types/jest": "^26.0.3",
     "@types/node": "^12.11.1",
