Apply new tslint rules.

--- a/angular.json
+++ b/angular.json
@@ -95,7 +95,8 @@
             ],
             "exclude": [
               "**/node_modules/**"
-            ]
+            ],
+            "fix": true
           }
         }
       }
