--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ts-loader": "^7.0.5",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "~3.9.5"
   }
 }
