--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,6 +13,13 @@
     "target": "es2015",
     "module": "es2020",
     "esModuleInterop": true,
+    "strict": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
     "lib": [
       "es2018",
       "dom"
